@@ -1,3 +1,9 @@
+2008-04-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/admin_gtk.py:
+	Fix stupidity in DVBAdminGtk.
+	Add stub for new MpegTSSplitter admin gtk.
+
 2008-04-09  Arek Korbik  <arkadini@gmail.com>
 
 	* flumotion/component/dvb/dvb.xml:
